# bukay

./: .env.example  .eslintrc.cjs  .gitignore  .prettierrc.cjs  AGENTS.md  CLAUDE.md  README.md  claude-output-63.md  claude-output-82.md  claude-prompt-123.md  claude-prompt-136.md  claude-prompt-63.md  claude-prompt-75.md  claude-prompt-82.md  claude-prompt-89.md  claude-prompt-98.md  lighthouserc.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  tsconfig.tsbuildinfo  verifier-pr-diff.patch  vitest.config.ts
.github/: labels.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/agents/: registry.yml
.github/gemini/: AGENT_INSTRUCTIONS.md
.github/scripts/: agent_registry.js  keepalive_loop.js
.github/workflows/: agents-71-codex-belt-dispatcher.yml  agents-72-codex-belt-worker.yml  agents-73-codex-belt-conveyor.yml  agents-80-pr-event-hub.yml  agents-81-gate-followups.yml  agents-auto-label.yml  agents-auto-pilot.yml  agents-autofix-dispatcher.yml  agents-autofix-loop.yml  agents-belt-dispatcher.yml  agents-bot-comment-handler.yml  agents-capability-check.yml  agents-decompose.yml  agents-dedup.yml  agents-guard.yml  agents-issue-intake.yml  agents-issue-optimizer.yml  agents-keepalive-loop-reporter.yml  agents-keepalive-loop.yml  agents-orchestrator.yml  agents-pr-health.yml  agents-pr-meta.yml  agents-verifier.yml  agents-verify-to-issue-v2.yml  agents-verify-to-issue.yml  agents-verify-to-new-pr.yml  agents-weekly-metrics.yml  autofix.yml  ci.yml  dependabot-automerge.yml  lighthouse-mobile.yml  list-llm-models.yml  maint-76-claude-code-review.yml  maint-coverage-guard.yml  pr-00-gate.yml  reusable-pr-context.yml
__tests__/app/: app-layout-auth.test.tsx  app-section-empty-states.test.tsx  app-shell.test.tsx  app-shell.visual-regression.test.tsx  app-sidebar.test.tsx  app-top-bar.test.tsx  layout.test.ts  page.test.tsx
__tests__/prisma/: booking_no_overlap_exclusion.test.ts
agents/: claude-10.md  claude-112.md  claude-12.md  claude-122.md  claude-135.md  claude-137.md  claude-141.md  claude-16.md  claude-18.md  claude-20.md  claude-26.md  claude-46.md  claude-62.md  claude-74.md  claude-8.md  claude-81.md  claude-88.md  claude-97.md  codex-110.md  codex-114.md  codex-133.md  codex-139.md  codex-32.md  codex-49.md  codex-72.md  codex-86.md  codex-90.md
app/: globals.css  layout.tsx  page.tsx
app/(app)/: layout.tsx
app/api/: _helpers.ts
app/auth/: phone-auth.ts  phone-number.ts  session-cookie.ts  sms-provider.ts  termii-sms-provider.ts
app/db/: prisma.ts  tenant-guard.ts
app/lib/: availability.ts  resolve-tenant.ts  tenant-context.ts  tenant-guard.ts
app/login/: page.tsx  route.ts
app/logout/: route.ts
app/services/: page.tsx  services-manager.tsx  services-view.tsx  types.ts
app/session/: route.ts
app/tenancy/: resolve-tenant.ts  tenant-context.ts
app/verify/: route.ts
config/: llm_slots.json  model_registry.json
docs/: DATA_MODEL.md  MULTITENANCY.md
docs/contracts/: agent-runner-output.md
prisma/: schema.prisma  seed.ts
scripts/: coverage_history_append.py  next-build-smoke.mjs  next-dev-smoke.mjs
scripts/langchain/: progress_reviewer.py  topic_splitter.py
src/bukay/: health.py
tests/: blackoutDates.test.ts  bookingOverlap.test.ts  ownerSchedule.test.ts  test_ci_failure_triage.py  test_health.py  test_prisma_migration.py  test_prisma_schema.py  test_prisma_seed.py  test_resolve_mypy_pin.py  test_smoke.py  test_tools_init.py
tests/ui/: bookingReschedule.test.tsx
tools/: __init__.py  ci_failure_triage.py  langchain_client.py  llm_provider.py  post_ci_summary.py  requirements-llm.txt  resolve_mypy_pin.py
web/: .env.example  package-lock.json  package.json  pnpm-lock.yaml
web/app/: layout.tsx
web/lib/: db.ts
(+138 files in other folders)
